commented out the mail settings.

--- a/Doberman.Example.Mvc3/Web.config
+++ b/Doberman.Example.Mvc3/Web.config
@@ -22,13 +22,14 @@
     <add key="MongoServer" value="mongodb://localhost/" />
   </appSettings>
 
+  <!--
   <system.net>
     <mailSettings>
       <smtp>
         <network host="localhost" port="25" />
       </smtp>
     </mailSettings>
-  </system.net>
+  </system.net>-->
 
   <system.web>
     <compilation debug="true" targetFramework="4.0">
