--- a/Doberman/Doberman.csproj
+++ b/Doberman/Doberman.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Checks\PageLoadsCheck.cs" />
     <Compile Include="DobermanResponse.cs" />
     <Compile Include="Model\DobermanResult.cs" />
+    <Compile Include="Model\EmailCheckSettings.cs" />
     <Compile Include="Mvc\BaseDobermanController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Doberman.cs" />
