re-implemented the email checking so it no longer needs to send an email, can now also test ssl secured smtp servers.

--- a/Doberman.Tests.Integration/App.config
+++ b/Doberman.Tests.Integration/App.config
@@ -16,7 +16,7 @@
   <system.net>
     <mailSettings>
       <smtp>
-        <network host="localhost" port="25" />
+        <network host="localhost" port="25" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
